--- a/yataverse/src/main/resources/templates/info.mustache
+++ b/yataverse/src/main/resources/templates/info.mustache
@@ -2,6 +2,7 @@
 <div class="pt-5">
     <h1>Yataverse!</h1>
     <img height="300" width="500" src="https://user-images.githubusercontent.com/88410343/146430676-aa952baa-7857-41e7-8d78-95f27e79f37c.png">
+    <img height="300" width="500" src="https://user-images.githubusercontent.com/88410343/146653487-78232ad4-3608-495e-9de8-480f443dd3f5.png">
     <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
