--- a/yataverse/src/main/resources/templates/layouts/card.mustache
+++ b/yataverse/src/main/resources/templates/layouts/card.mustache
@@ -27,11 +27,12 @@
         </div>
     </div>
     <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <a href="/weather">
+            <img src="https://user-images.githubusercontent.com/88410343/146653410-51f347b8-0879-45c5-acdc-1ec74181ff22.png" class="card-img-top" alt="...">
+        </a>
         <div class="card-body">
-            <h5 class="card-title">Title4</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Yataverse Weather!</h5>
+            <p class="card-text">Please share weather information with your neighbors!</p>
         </div>
     </div>
 </div>
