--- a/yataverse/src/main/resources/templates/layouts/header.mustache
+++ b/yataverse/src/main/resources/templates/layouts/header.mustache
@@ -28,7 +28,7 @@
         });
     </script>
 </head>
-<body class="pt-5">
+<body class="bd pt-5">
 <!-- navigation -->
 <nav class="navbar navbar-light bg-light fixed-top">
     <div class="container-fluid">
@@ -101,18 +101,18 @@
                             <li><a class="dropdown-item" href="/chat">▶ Chat!</a></li>
                             <li><a class="dropdown-item" href="/trade">▶ Trade!</a></li>
                             <li><a class="dropdown-item" href="/qna?idx=1">▶ Yasukete!</a></li>
+                            <li><a class="dropdown-item" href="/qna?idx=1">▶ Weather!</a></li>
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="/info">About Yataverse!</a></li>
                     <li>
                         <hr class="dropdown-divider">
                     </li>
+                    </li>
+                    <li><a class="dropdown-item" href="https://github.com/HYUNTAEAN" target="_blank">Github!</a></li>
+                    <li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </div>
