--- a/yataverse/src/main/resources/templates/msgbox.mustache
+++ b/yataverse/src/main/resources/templates/msgbox.mustache
@@ -33,8 +33,8 @@
             , method : 'GET'
             , data : myData
             , success : function(){
-
                 div.remove();
+                location.reload();
             }
         });
     }
