--- a/yataverse/src/main/resources/templates/info.mustache
+++ b/yataverse/src/main/resources/templates/info.mustache
@@ -16,6 +16,8 @@
                     新しい技術を身につけると同時に、様々な機能実装にチャレンジすることを目指して開発しました。<br>
                     <code>Spring Security</code>,
                     <code>WebSocket</code>
+                    <code>外部API</code>
+                    <code>Crawling</code>
                     などの技術が実装しております。
                 </div>
             </div>
@@ -28,7 +30,7 @@
             </h2>
             <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                 <div class="accordion-body">
-                    <strong>'Yataverse'</strong>の名前の元は<code>'Yahoo'</code> + <code>'メタバース'</code>です。<br>
+                    <strong>'Yataverse'</strong>の名前の元は<code>'やった'</code> + <code>'メタバース'</code>です。<br>
                     <code>'Metaverse'</code>というものは、仮想と現実の世界を繋がっている空間であり、<br>
                     人の生活をアドバイスする全ての機能を一つのWebSiteで実装したら<br>
                     それが本当のメタバースになると考えています。
@@ -43,9 +45,10 @@
             </h2>
             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                 <div class="accordion-body">
-                    <strong>Chat!</strong> <code>WebSocket(SockJS)</code> ▶Multiple Chat Room<br>
-                    <strong>Trade!</strong> <code>Naver Map API</code> ▶Map-Based Trade System<br>
-                    <strong>Yasukete!</strong><br>
+                    <strong>Chat</strong> <code>WebSocket(SockJS)</code> ▶Multiple Chat Room<br>
+                    <strong>Trade</strong> <code>Naver Map API</code> ▶Map-Based Trade System<br>
+                    <strong>Yasukete</strong> <code>Paging</code> ▶Question & Answer<br>
+                    <strong>Weather</strong> <code>Crawling</code> ▶Weather Information <br>
                     </div>
             </div>
         </div>
