--- a/yataverse/src/main/resources/templates/layouts/card.mustache
+++ b/yataverse/src/main/resources/templates/layouts/card.mustache
@@ -4,7 +4,7 @@
             <img src="https://user-images.githubusercontent.com/88410343/146374524-a3c423cd-e752-4149-bcc4-1e4b84ab7fbc.jpg" class="card-img-top" alt="chat">
         </a>
         <div class="card-body">
-            <h5 class="card-title">Yataverse Chat!</h5>
+            <h5 class="card-title">Chat</h5>
             <p class="card-text">Enjoy chatting with people all over the world!</p>
         </div>
     </div>
@@ -13,7 +13,7 @@
             <img src="https://user-images.githubusercontent.com/88410343/146376002-be208031-9053-4c50-b4d5-561388817ac4.jpg" class="card-img-top" alt="...">
         </a>
         <div class="card-body">
-            <h5 class="card-title">Yataverse Trade!</h5>
+            <h5 class="card-title">Trade</h5>
             <p class="card-text">Try to trade things with the people in the neighborhood!</p>
         </div>
     </div>
@@ -22,7 +22,7 @@
             <img src="https://user-images.githubusercontent.com/88410343/146377192-6643b17f-33d6-4eef-b71f-ba151cbd6565.jpg" class="card-img-top" alt="...">
         </a>
         <div class="card-body">
-            <h5 class="card-title">Yasukete!</h5>
+            <h5 class="card-title">Q&A</h5>
             <p class="card-text">Share your knowledge through questions and answers!</p>
         </div>
     </div>
@@ -31,8 +31,8 @@
             <img src="https://user-images.githubusercontent.com/88410343/146653410-51f347b8-0879-45c5-acdc-1ec74181ff22.png" class="card-img-top" alt="...">
         </a>
         <div class="card-body">
-            <h5 class="card-title">Yataverse Weather!</h5>
-            <p class="card-text">Please share weather information with your neighbors!</p>
+            <h5 class="card-title">Weather</h5>
+            <p class="card-text">Share weather information!</p>
         </div>
     </div>
 </div>
