--- a/yataverse/src/main/resources/templates/layouts/header.mustache
+++ b/yataverse/src/main/resources/templates/layouts/header.mustache
@@ -32,7 +32,9 @@
 <!-- navigation -->
 <nav class="navbar navbar-light bg-light fixed-top">
     <div class="container-fluid">
-
+        <a class="navbar-brand" href="/">
+            <h2>Yataverse</h2>
+        </a>
     {{#loginId}}
         <div class="letter-box">
             <button type="button" class="btn btn-primary position-relative" onclick="location.href='/msgbox'">
