--- a/yataverse/src/main/resources/templates/layouts/slide.mustache
+++ b/yataverse/src/main/resources/templates/layouts/slide.mustache
@@ -6,7 +6,8 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner pt-5" style="height:450px;">
-            <div class="carousel-item">
+
+            <div class="carousel-item active">
                 <a href="/info">
                     <img src="https://user-images.githubusercontent.com/88410343/146430676-aa952baa-7857-41e7-8d78-95f27e79f37c.png" class="d-block w-100" alt="...">
                 </a>
